# HUANREAL-Vietnamese-Stock-Predictor

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  agent_prompt.md  claude_prompt.md  config.yaml  evaluate.bat  predict_base.bat  predict_gemini.bat  pyproject.toml  reset_rate_limits.bat  run_config_suggest.bat  run_config_tuner.bat  self_correct_prompt.md  setup.bat
scripts/: backfill_low_head_validation.py  compare_include_vs_exclude_held.py  demo_tickers.py  fill_plan.py  rebound_clean_results.py  rebound_config_suggest.py  rebound_config_tuner.py  rebound_final_sim.py  rebound_portfolio_sim.py  rebound_sim_exclude_held.py  rebound_sim_hold_pred_days.py  rebound_sim_include_held.py  rebound_sim_predicted_exit.py  repair_corporate_action_corruption.py  repair_ledger_band_break.py
tests/: conftest.py  test_actionable_only.py  test_audit_cache.py  test_best_choice.py  test_budget_mode.py  test_cache_freshness.py  test_cache_merge_guard.py  test_ceiling_lock.py  test_corporate_action.py  test_dimension_tracking.py  test_eligible_universe.py  test_entry_slippage.py  test_features.py  test_fetch_universe_consolidate.py  test_hose_only.py  test_liquidity_filter.py  test_low_prediction.py  test_mode_compare.py  test_overbought.py  test_predict_tradable_filter.py  test_pricing.py  test_rate_limiter.py  test_rebound_llm.py  test_rebound_rank.py  test_recovery.py  test_recovery_model.py  test_regret.py  test_repair_corporate_action_corruption.py  test_run_uniqueness.py  test_target.py  test_top_n_selection.py  test_trading_calendar.py  (+5 more)
(+43 files in other folders)
