[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockpredict"
version = "0.1.0"
description = "Vietnamese T+N swing-trade stock predictor (HOSE/HNX/UPCOM)"
requires-python = ">=3.10,<3.14"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Lê Vương Gia Huân" },
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "vnstock>=4.0.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "click>=8.1",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
llm = ["anthropic>=0.39"]

[project.scripts]
stockpredict = "stockpredict.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
